--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
     font-family: sans-serif;
-    font-size: 1rem;
+    font-size: 1em;
 }
 
 .container {
@@ -22,7 +21,7 @@ h1 {
 }
 
 h2 {
-    font-size: 1.2rem;
+    font-size: 1.2em;
     font-weight: 400;
     background-color: #e5e5e5;
     padding: 2px;
@@ -30,14 +29,14 @@ h2 {
 }
 
 p {
-    font-size: 1.2rem;
+    font-size: 1.2em;
 }
 
 input {
     width: 70px;
-    height: 3px 0px 3px 15px;
+    margin: 3px 0px 3px 15px;
     padding: 10px;
-    font-size: 1.2rem;
+    font-size: 1.2em;
     border: 1px solid #a1a1a1;
     border-radius: 5px;
 }
